# time-tracking-manager

./: .gitignore  Cargo.toml  Readme.md  codecov.yml
.github/workflows/: ci.yml  format.yml  release.yml
src/: args.rs  entries.rs  errors.rs  exporters.rs  filters.rs  lib.rs  main.rs  provider_handle.rs  providers.rs  renamers.rs  tablers.rs  utils.rs
src/exporters/: console.rs  csv.rs  progessi.rs
src/providers/: clockify.rs
src/tablers/: proportional.rs
