[package]
name = "time-tracking-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.5", features = ["blocking", "json", "default-tls"], default-features = false }
serde = { version = "1.0.208", features = ["derive", "serde_derive"] }
serde_json = "1.0.125"
clap = { version = "4.5.16", features = ["derive"] }
comfy-table = "7.1.1"
