[package]
name = "time-tracking-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", features = [
    "blocking",
    "json",
    "default-tls",
], default-features = false }
serde = { version = "1.0.208", features = ["derive", "serde_derive"] }
serde_json = "1.0.125"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
csv = "1.3.0"
rand = "0.8.5"
wasm-bindgen = "0.2.93"
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1.40.0", features = ["macros", "rt"] }
futures = "0.3.30"
wasm-bindgen-futures = "0.4.43"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.70", features = [
    "console",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Document",
    "NodeList",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "Event",
] }
describe = "0.1.0"
serde-wasm-bindgen = "0.6.5"
gloo = "0.11.0"
async-trait = "0.1.83"
thiserror = "1.0.64"
